src/objects/CAPA_History__c.object
<CustomObject>
    <fields>
        <fullName>CAPA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAPA</label>
        <referenceTo>CAPA__c</referenceTo>
        <relationshipLabel>CAPA Histories</relationshipLabel>
        <relationshipName>CAPA_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FieldApiName__c</fullName>
        <label>FieldApiName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <label>FieldName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewValue__c</fullName>
        <label>NewValue</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldValue__c</fullName>
        <label>OldValue</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent</label>
        <picklist>
            <picklistValues>
                <fullName>CAPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeleted</label>
        <type>Checkbox</type>
    </fields>
    <label>CAPA History</label>
    <nameField>
        <displayFormat>CH-{0000}</displayFormat>
        <label>CAPA History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CAPA Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>